Fixed random gap in navbar

--- a/sass/navbar.scss
+++ b/sass/navbar.scss
@@ -1,3 +1,7 @@
+.navbar-start {
+	margin-right: 0;
+}
+
 .nested.dropdown {
   &:hover > .dropdown-menu {
     display: block;
